syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  string username = 1;
  string password = 2; // For demonstration purposes only
}
